# rbc-ach

./: .gitignore  README.md  app.js  main.js  package.json  template.csv
electron/: ach-converter.js  index.html  package-lock.json  package.json  style.css
tauri/: index.html  package.json  pnpm-lock.yaml
tauri/src/: App.css  App.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs
tauri/src-tauri/src/csvconv/: csv.rs  error.rs  mod.rs  types.rs  utils.rs
web/: RBCACH.platypus  run.sh  start.sh
web/rbc-rs/: Cargo.toml  Jan of PAP Tenant 1.txt  format.sh  format.txt  index.html  out.txt
web/rbc-rs/src/: main.rs
web/rbc-rs/src/csvconv/: csv.rs
web/rbc-rs/src/lib/: header.rs  mod.rs  payment.rs
web/ui/: package.json  pnpm-lock.yaml  webpack.config.js
web/ui/src/: App.js  index.html  index.js  styles.css
