[package]
name = "rbc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.5.0"
actix-web = "4.3.0"
chrono = "0.4.23"
csv = "1.1.6"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
open = "5.3.1"